src/common.blocks/page/page.scss
.page {
  align-content: space-between;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: flex-start;
  max-height: 236rem*0.55;
  padding-left: 3.5rem;
  padding-right: 3.309rem;
  padding-top: 4.4rem;

  @media screen and (max-width: 400px) {
    padding-left: 8vw;
    padding-right: 8vw;
  }

  @media screen and (max-width: 722px) {
    flex-wrap: nowrap;
  }

  &__section {
    margin-bottom: 2.9205rem;
    width: 36.5%;

    @media screen and (max-width: 722px) {
      width: 100%;
    }

    &_width {
      &_wide {
        margin-right: 0.25rem;
        width: 56%;

        @media screen and (max-width: 722px) {
          margin-left: 0;
          width: 100%;
        }
      }
    }

    &_type {
      &_for-header {
        margin-bottom: 4.88rem;
        margin-left: 0.354rem;
        margin-top: 0.1rem;
      }

      &_for-profile {
        margin-left: 0.236rem;
      }

      &_for-contact {
        margin-bottom: 2.2715rem;
        width: 36.9%;
      }

      &_for-skills {
        margin-left: 0.177rem;
      }

      &_for-header, &_for-profile, &_for-contact, &_for-skills {
        @media screen and (max-width: 722px) {
          margin-left: 0;
        }
      }

      &_for-education, &_for-experience {
        margin-bottom: 1.8585rem;
      }
    }
  }

  &__section-header {
    &_type_for-contact {
      margin-left: 0.118rem;

      @media screen and (max-width: 722px) {
        margin-left: 0;
      }
    }
  }

  &__section-content {
    &_type {
      &_for-profile {
        margin-left: 0;
        margin-top: 0.8rem;
      }

      &_for-skills {
        margin-top: 1.45rem;
      }

      &_for-education {
        margin-left: 0.885rem;
        width: 100%;
      }

      &_for-experience {
        margin-left: 0.885rem;
        margin-top: 2.65rem;
        width: 100%;
      }

      &_for-software {
        margin-left: 0.3245rem;
        margin-right: 0.0295rem;
        margin-top: 1.6rem;
        width: 100%;
      }
    }
  }
}

